@@ -3,6 +3,10 @@ Released 2.4.40 2017-06-xx
 
 Changes since 2.4.39:
 
+Modules/
+* fixed memory leaks when using extended controls
+  (thanks to Erik Cumps)
+
 ----------------------------------------------------------------
 Released 2.4.39 2017-05-31
 
@@ -1448,4 +1452,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.448 2017/06/23 07:16:26 stroeder Exp $
+$Id: CHANGES,v 1.449 2017/06/23 18:09:59 stroeder Exp $
